Switch from Fedora to RHEL CoreOS base iso

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ coreos-diagnostic.iso
 coreos-diagnostic.oci
 coreos-installer
 diagnostic.bu
-fedora-coreos.live.x86_64.iso
+coreos.live.x86_64.iso
 gather_facts.sh
 iso-overlay/
 iso-root/
